--- a/cloudinit/bastion_host_ol7.yaml
+++ b/cloudinit/bastion_host_ol7.yaml
@@ -98,7 +98,7 @@ runcmd:
 # configure tools from development repositories
   - yum-config-manager --enable ol7_developer --enable ol7_developer_EPEL
   - yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo
-  - yum install -y pwgen fail2ban docker-ce
+  - yum install -y pwgen fail2ban docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
 
 # configure automatic download / updates
   - yum install -y yum-cron
